# sslchains

./: Cargo.toml  README.md
samples/: ca_signed.crt  ca_signed.csr  ca_signed.key  intermediate_ca.crt  intermediate_ca.key  intermediate_ca.srl  self_signed.crt  self_signed.csr  self_signed.key  self_signed.pem  self_signed_san.crt  self_signed_san.csr  self_signed_san.key  self_signed_san_no_cert.csr  self_signed_san_no_cert.key  self_signed_san_no_csr.crt  self_signed_san_no_csr.key  self_signed_san_www_only.crt  self_signed_san_www_only.csr  self_signed_san_www_only.key
samples/create/: new_self_signed.sh  openssl.cnf  v3.ext
src/: arguments.rs  chain.rs  compare.rs  display.rs  keys.rs  main.rs  options.rs
