[package]
name = "sslchains"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopt = "1.1.3"
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
# https://github.com/johnthagen/min-sized-rust
strip = true